# sputniq

./: .gitignore  Dockerfile  README.md  SETUP_GUIDE.md  create_e2e_agent_zip.py  deploy_result.json  deploy_tmp.py  docker-compose.yml  fix_test.py  index.html  pyproject.toml  run_app.sh  script.js  test_deploy.py  test_graph.py  test_plan.md  update_html.py
Documentation/: 1a-dev-process.md  2a-deploy-process.md  3a-bootstrap-process.md  4a-execution-flow.md  architecture-diagrams.md  architecture.md  bootstrap-process.md  deploy-process.md  dev-process.md  execution-flow.md  implementation-phases.md  platform-architecture.md  project-plan.md  provisioning-bootstrap.md  testing-integration-plan.md
complex_agent_app/: config.json
complex_agent_app/src/agents/: mission_control.py  reviewer.py
complex_agent_app/src/data/: briefings.json
complex_agent_app/src/tools/: briefing_search.py  resource_forecast.py  risk_matrix.py  task_graph.py
infrastructure/: docker-compose-nodes.yml  setup-nodes.sh
infrastructure/.ssh-nodes/: Dockerfile  id_rsa  id_rsa.pub
research_app/: config.json  package.json  requirements.txt
research_app/src/agents/: research.py
research_app/src/tools/: search.js
sample_app/: README.md  config.json
sample_app/src/agents/: weather.py
sample_app/src/tools/: weather.py  weather_api.py
sample_gemini_app/: log.txt  log_all.txt  requirements.txt  run.py  run_worker.py  sputniq.json
sample_gemini_app/orchestrator/: graph.py
sample_gemini_app/src/agents/: assistant.py
sample_gemini_app/src/tools/: api_fetch.py
scripts/: create_complex_agent_app.py  create_sample_app.py
src/sputniq/: __init__.py
src/sputniq/api/: auth.py  dashboard.html  dashboard.js  server.py
src/sputniq/bus/: __init__.py  base.py  kafka.py
src/sputniq/cli/: __init__.py  main.py
src/sputniq/config/: __init__.py  errors.py  parser.py
src/sputniq/generator/: __init__.py  (+2 more)
tests/: test_api_server.py  test_auth.py  test_boot.py  test_bootstrap.py  test_builder.py  test_cli.py  test_cli_ops.py  test_cli_ops_deployment.py  test_config_parser.py  test_coordinator.py  test_deploy_teardown.py  test_dispatcher.py  test_executors.py  test_gateway.py  test_generator.py  test_lifecycle.py  test_message_bus.py  test_models.py  test_observability.py  test_ops_deployment.py  test_ops_security.py  test_registry_store.py  test_sdk.py  test_state.py  test_system_master.py
tests/fixtures/: broken_refs_config.json  circular_deps_config.json  valid_config.json
(+39 files in other folders)
