[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sputniq"
version = "0.1.0"
description = "Config-driven orchestration for agentic AI systems"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "click>=8.0",
    "jinja2>=3.0",
    "rich>=13.0",
]

[project.scripts]
agentos = "sputniq.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/sputniq"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
src = ["src", "tests"]
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
