[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sputniq"
version = "0.1.0"
description = "Config-driven orchestration for agentic AI systems"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "click>=8.0",
    "jinja2>=3.0",
    "rich>=13.0",
    "aiokafka>=0.11.0",
    "fastapi>=0.110.0",
    "redis>=5.0.0",
    "asyncpg>=0.29.0",
    "docker>=7.0.0",
    "uvicorn>=0.29.0",
    "langgraph>=0.0.30"
]

[project.scripts]
agentos = "sputniq.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/sputniq"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
src = ["src", "tests"]
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
